force-app/main/default/objects/Debtor_Payment__c/Debtor_Payment__c.object-meta.xml
<CustomObject>
    <label>Debtor Payment</label>
    <nameField>
        <displayFormat>DP-{0000}</displayFormat>
        <label>Debtor Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debtor Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>