force-app/main/default/objects/Debtor_Payment__c/fields/Advance_Tax_TDS__c.field-meta.xml
<CustomField>
    <fullName>Advance_Tax_TDS__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Advance Tax(TDS)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>