force-app/main/default/objects/Debtor_Payment__c/fields/CGST_Payable__c.field-meta.xml
<CustomField>
    <fullName>CGST_Payable__c</fullName>
    <defaultValue>0</defaultValue>
    <label>CGST Payable</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>