force-app/main/default/objects/Debtor_Payment__c/fields/Date_of_Cheque_DD__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Cheque_DD__c</fullName>
    <label>Date of Cheque/DD</label>
    <type>Date</type>
</CustomField>