force-app/main/default/objects/Debtor_Payment__c/fields/Date_of_Transfer_Receipt__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Transfer_Receipt__c</fullName>
    <label>Date of Transfer/Receipt</label>
    <type>Date</type>
</CustomField>