force-app/main/default/objects/Debtor_Payment__c/fields/Debtor_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Invoice__c</fullName>
    <label>Debtor Invoice</label>
    <referenceTo>Debtor_Invoice__c</referenceTo>
    <relationshipLabel>Debtor Payments</relationshipLabel>
    <relationshipName>Debtor_Payments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>