force-app/main/default/objects/Debtor_Payment__c/fields/Debtor_Payment_Date__c.field-meta.xml
<CustomField>
    <fullName>Debtor_Payment_Date__c</fullName>
    <label>Debtor Payment Date</label>
    <type>Date</type>
</CustomField>