force-app/main/default/objects/Debtor_Payment__c/fields/Foriegn__c.field-meta.xml
<CustomField>
    <fullName>Foriegn__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Foreign Currency Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>