force-app/main/default/objects/Debtor_Payment__c/fields/Gross_Amount_Manual__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount_Manual__c</fullName>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>