force-app/main/default/objects/Debtor_Payment__c/fields/Invoice_No__c.field-meta.xml
<CustomField>
    <fullName>Invoice_No__c</fullName>
    <label>Invoice No</label>
    <length>16</length>
    <type>Text</type>
</CustomField>