force-app/main/default/objects/Debtor_Payment__c/fields/Opportunity_Reference__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Reference__c</fullName>
    <label>Opportunity Reference</label>
    <length>18</length>
    <type>Text</type>
</CustomField>