force-app/main/default/objects/Debtor_Payment__c/fields/Voucher_No__c.field-meta.xml
<CustomField>
    <fullName>Voucher_No__c</fullName>
    <label>Voucher No</label>
    <length>100</length>
    <type>Text</type>
</CustomField>